first push project

--- a/src/data_engineer/eda.ipynb
+++ b/src/data_engineer/eda.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:16.991044Z",
-     "start_time": "2025-07-23T10:11:16.982020Z"
+     "end_time": "2025-07-26T05:27:16.625893Z",
+     "start_time": "2025-07-26T05:27:16.615371Z"
     }
    },
    "cell_type": "code",
@@ -15,26 +15,26 @@
    ],
    "id": "38b5d1c00142ed4a",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:17.023107Z",
-     "start_time": "2025-07-23T10:11:17.008078Z"
+     "end_time": "2025-07-26T05:28:05.093251Z",
+     "start_time": "2025-07-26T05:28:05.076619Z"
     }
    },
    "cell_type": "code",
    "source": "data_path = \".../data/atp1_2000-2024/\"",
    "id": "362af98bb152b485",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:17.069332Z",
-     "start_time": "2025-07-23T10:11:17.055303Z"
+     "end_time": "2025-07-26T05:28:43.778988Z",
+     "start_time": "2025-07-26T05:28:43.762092Z"
     }
    },
    "cell_type": "code",
@@ -53,20 +53,23 @@
    "id": "fc525cad0470dfb2",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ ： 23\n",
-      "： ['../data/atp1_2000-2024\\\\atp_matches_2000.csv', '../data/atp1_2000-2024\\\\atp_matches_2001.csv', '../data/atp1_2000-2024\\\\atp_matches_2002.csv']\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: \"'../..', 'data', 'atp1_2000-2024'\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[15], line 3\u001B[0m\n\u001B[0;32m      1\u001B[0m data_folder \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m../..\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m, \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdata\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m, \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124matp1_2000-2024\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m----> 3\u001B[0m all_files \u001B[38;5;241m=\u001B[39m \u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlistdir\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdata_folder\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      5\u001B[0m train_files \u001B[38;5;241m=\u001B[39m [f \u001B[38;5;28;01mfor\u001B[39;00m f \u001B[38;5;129;01min\u001B[39;00m all_files \u001B[38;5;28;01mif\u001B[39;00m f\u001B[38;5;241m.\u001B[39mendswith(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m.csv\u001B[39m\u001B[38;5;124m\"\u001B[39m) \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m2023\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m f \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m2024\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m f]\n\u001B[0;32m      7\u001B[0m train_paths \u001B[38;5;241m=\u001B[39m [os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mjoin(data_folder, f) \u001B[38;5;28;01mfor\u001B[39;00m f \u001B[38;5;129;01min\u001B[39;00m train_files]\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [WinError 3] The system cannot find the path specified: \"'../..', 'data', 'atp1_2000-2024'\""
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:17.320060Z",
+     "end_time": "2025-07-26T05:27:11.785732900Z",
      "start_time": "2025-07-23T10:11:17.085877Z"
     }
    },
@@ -300,7 +303,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:17.397967Z",
+     "end_time": "2025-07-26T05:27:11.816105800Z",
      "start_time": "2025-07-23T10:11:17.368032Z"
     }
    },
@@ -341,7 +344,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:17.491145Z",
+     "end_time": "2025-07-26T05:27:11.817108Z",
      "start_time": "2025-07-23T10:11:17.445774Z"
     }
    },
@@ -387,7 +390,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:17.569313Z",
+     "end_time": "2025-07-26T05:27:11.817608200Z",
      "start_time": "2025-07-23T10:11:17.538837Z"
     }
    },
@@ -422,7 +425,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:17.725723Z",
+     "end_time": "2025-07-26T05:27:11.818608300Z",
      "start_time": "2025-07-23T10:11:17.601089Z"
     }
    },
@@ -456,7 +459,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:18.132113Z",
+     "end_time": "2025-07-26T05:27:11.819610500Z",
      "start_time": "2025-07-23T10:11:17.742248Z"
     }
    },
@@ -486,7 +489,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:18.273246Z",
+     "end_time": "2025-07-26T05:27:11.824621300Z",
      "start_time": "2025-07-23T10:11:18.164263Z"
     }
    },
@@ -515,7 +518,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:18.553662Z",
+     "end_time": "2025-07-26T05:27:11.826125200Z",
      "start_time": "2025-07-23T10:11:18.289449Z"
     }
    },
@@ -546,7 +549,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:18.694071Z",
+     "end_time": "2025-07-26T05:27:11.826125200Z",
      "start_time": "2025-07-23T10:11:18.586491Z"
     }
    },
@@ -583,7 +586,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:18.803136Z",
+     "end_time": "2025-07-26T05:27:11.827629600Z",
      "start_time": "2025-07-23T10:11:18.726228Z"
     }
    },
@@ -619,7 +622,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:19.132233Z",
+     "end_time": "2025-07-26T05:27:11.827629600Z",
      "start_time": "2025-07-23T10:11:18.819613Z"
     }
    },
@@ -729,7 +732,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-07-23T10:11:20.098078Z",
+     "end_time": "2025-07-26T05:27:11.828631300Z",
      "start_time": "2025-07-23T10:11:19.164129Z"
     }
    },
